// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabled: false 1`] = `
":host {
  scroll-margin-block-start: calc(max(2px, var(--p-internal-select-option-scaling, 1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--p-internal-select-option-scaling, 1) * 6px) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(img) {
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  width: auto !important;
  height: calc(6px + 2.125ex) !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.option {
  display: flex;
  gap: calc(11.2px * (var(--p-internal-select-option-scaling) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(--p-internal-select-option-scaling) - 0.64285714) + 4px);
  padding-inline: var(--p-internal-select-option-padding-left, calc(16.8px * (var(--p-internal-select-option-scaling) - 0.64285714) + 6px)) calc(16.8px * (var(--p-internal-select-option-scaling) - 0.64285714) + 6px);
  min-height: calc(6px + 2.125ex);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-high);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.option--highlighted {
  background: var(--p-color-frosted);
}
.option--highlighted, .option--selected {
  color: var(--p-color-primary);
}
.option--disabled {
  cursor: not-allowed;
}
.option--hidden {
  display: none;
}
.icon {
  margin-inline-start: auto;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true 1`] = `
":host {
  opacity: 0.4 !important;
  scroll-margin-block-start: calc(max(2px, var(--p-internal-select-option-scaling, 1) * 6px) + 36px) !important;
  scroll-margin-block-end: max(2px, var(--p-internal-select-option-scaling, 1) * 6px) !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(img) {
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  width: auto !important;
  height: calc(6px + 2.125ex) !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.option {
  display: flex;
  gap: calc(11.2px * (var(--p-internal-select-option-scaling) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(--p-internal-select-option-scaling) - 0.64285714) + 4px);
  padding-inline: var(--p-internal-select-option-padding-left, calc(16.8px * (var(--p-internal-select-option-scaling) - 0.64285714) + 6px)) calc(16.8px * (var(--p-internal-select-option-scaling) - 0.64285714) + 6px);
  min-height: calc(6px + 2.125ex);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-high);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.option--highlighted {
  background: var(--p-color-frosted);
}
.option--highlighted, .option--selected {
  color: var(--p-color-primary);
}
.option--disabled {
  cursor: not-allowed;
}
.option--hidden {
  display: none;
}
.icon {
  margin-inline-start: auto;
}"
`;
